Fixed alignment bug for page header and chat box.

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -179,6 +179,7 @@ a:hover {
 	background-color: #ecf1ec;
 	margin-left: 0px;
 	height: 100%;
+	width: 100%;
 	text-align: center;
 	padding-top: 40px;
 }
